# Engineering-Fundamentals

./: README.md  pyproject.toml  server_user_id.txt
Pandas/: 02_flow.py  04_aisc_database.py  ReadMe.md  cleaned_flows.csv  flows.csv  pandas_101.py  pyproject.toml
Structural/: Basics.ipynb  Code_Tutorials.code-workspace  SAP2000_API.ipynb  beam_formulas.ipynb  dynamics.ipynb  essence_of_programming.ipynb  failure_theories.ipynb  intro_examples.ipynb  matrices.ipynb  pyproject.toml  script_example.py
Structural/Pandas/: pandas101.ipynb
Structural/Pynite/: Space Truss.py  braced_frame_spring_support.py  hydrostatic_loads.py  pyproject.toml
Structural/SAP2000/: 3D_frame.$2k  3D_frame.K_0  3D_frame.K_I  3D_frame.K_J  3D_frame.K_M  3D_frame.OUT  3D_frame.Y  3D_frame.Y$$  3D_frame.Y00  3D_frame.Y03  3D_frame.Y04  3D_frame.Y05  3D_frame.Y_  3D_frame.Y_1  3D_frame.msh  3D_frame.sdb  API_1-001.$2k  API_1-001.K_0  API_1-001.K_J  API_1-001.K_M  API_1-001.OUT  API_1-001.Y  API_1-001.Y$$  API_1-001.Y00  API_1-001.Y01  API_1-001.Y03  API_1-001.Y04  API_1-001.Y05  API_1-001.Y_  API_1-001.Y_1  API_1-001.msh  API_1-001.sdb
Structural/symbeam/: example4.py  pyproject.toml
