[tool.poetry]
name = "symbeam_beam_examples"
version = "0.1.0"
description = "Symbeam examples"
authors = ["joreilly86 <joreilly86@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.6"
symbeam = "^1.1.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
